// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Picker Calendar (unit tests) when disabled dates is passed and all dates are valid should match the snapshot 1`] = `
<kv-time-picker-calendar>
  <mock:shadow-root>
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-time-picker-calendar-day day="31" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="11"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="12"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="13"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="14"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="15"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="16"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="17"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="18"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="19"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="20"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="21"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="22"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="23"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="24"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="25"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="26"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="27"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="28"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="29"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="30"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="31"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10" disabled=""></kv-time-picker-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-time-picker-calendar>
`;

exports[`Time Picker Calendar (unit tests) when initial date is passed and is a valid date should match the snapshot 1`] = `
<kv-time-picker-calendar initial-date="2022-08-01">
  <mock:shadow-root>
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-time-picker-calendar-day day="31" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="11"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="12"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="13"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="14"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="15"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="16"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="17"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="18"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="19"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="20"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="21"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="22"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="23"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="24"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="25"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="26"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="27"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="28"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="29"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="30"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="31"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10" disabled=""></kv-time-picker-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-time-picker-calendar>
`;

exports[`Time Picker Calendar (unit tests) when selected dates is passed and all dates are valid should match the snapshot 1`] = `
<kv-time-picker-calendar>
  <mock:shadow-root>
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-time-picker-calendar-day day="31" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day active="" day="5" israngestartdate=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day active="" day="6" isbetweenselecteddates=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day active="" day="7" israngeenddate=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="11"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="12"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="13"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="14"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="15"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="16"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="17"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="18"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="19"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="20"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="21"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="22"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="23"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="24"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="25"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="26"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="27"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="28"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="29"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="30"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="31"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10" disabled=""></kv-time-picker-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-time-picker-calendar>
`;

exports[`Time Picker Calendar (unit tests) when uses default props should match the snapshot 1`] = `
<kv-time-picker-calendar>
  <mock:shadow-root>
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-time-picker-calendar-day day="31" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="11"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="12"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="13"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="14"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="15"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="16"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="17"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="18"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="19"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="20"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="21"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="22"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="23"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="24"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="25"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="26"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="27"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="28"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="29"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="30"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="31"></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="1" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="2" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="3" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="4" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="5" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="6" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="7" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="8" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="9" disabled=""></kv-time-picker-calendar-day>
            <kv-time-picker-calendar-day day="10" disabled=""></kv-time-picker-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-time-picker-calendar>
`;
